--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,9 @@ jobs:
            - uses: actions/setup-java@v1
              with:
                  java-version: '11.x'
+           - name: Update node.js
+             run: npm update
            - name: Install node.js packages
              run: npm install
+             run: npm run ci:frontend:test
+
