--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,13 +36,10 @@ jobs:
            - run: npm install
            - run: npm run test
            - run: chmod +x mvnw && npm run ci:backend:test
-           - run: $ ./mvnw -ntp verify -DskipTests --batch-mode "-Pprod" "-Pe2e" "-Denforcer.skip=true"*
-           - run: $ npm run ci:e2e:prepare:docker
-           - run: $ npm run ci:e2e:run
-           - run: $ npm run ci:e2e:teardown
-           - run: $ npm run e2e
-           - run: $ ./mvnw 
-           - run: $ npm run e2e
+           - run: ./mvnw -ntp verify -DskipTests --batch-mode "-Pprod" "-Pe2e" "-Denforcer.skip=true"
+           - run: npm run ci:e2e:prepare:docker
+           - run: npm run ci:e2e:run
+           - run: npm run ci:e2e:teardown
 
 
 
